Cleaned up manifest (continue checking what isn't needed)

--- a/manifest.json
+++ b/manifest.json
@@ -29,8 +29,7 @@
 	[
 		"webRequest",
 		"webRequestBlocking",
-		"http://tide.com/*/*",
-		"https://tide.com/*/*",
+		"*://tide.com/*",
 		"background"
 	]
 }
