--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 	},
 	"background":
 	{
-		"scripts": ["background.js"],
+		"scripts": ["jquery.min.js", "background.js"],
 		"persistent": true
 	},
 	"content_scripts":
