--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
 	"manifest_version": 2,
 	"name": "BadBusiness",
-	"version": "1.0",
+	"version": "2.0",
 	"description": "Abolish the prison-industrial complex",
 	"icons": {
-		"16": "icons/logo16.jpg",
-		"48": "icons/logo48.jpg",
-		"128": "icons/logo128.jpg"
+		"16": "icons/logo16.png",
+		"48": "icons/logo48.png",
+		"128": "icons/logo128.png"
 	},
 	"background":
 	{
