--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "BadBusiness",
 	"version": "2.0",
-	"description": "Abolish the prison-industrial complex",
+	"description": "Abolish prison labor and the prison-industrial complex",
 	"icons": {
 		"16": "icons/logo16.png",
 		"48": "icons/logo48.png",
@@ -25,8 +25,65 @@
 	[
 		"webRequest",
 		"webRequestBlocking",
-		"*://tide.com/*",
-		"*://bountytowels.com/*",
-		"background"
+		"background",
+		"*://www.pfizer.com/*",
+		"*://www.centrum.com/*",
+		"*://www.robitussin.com/*", 
+		"*://www.viagra.com/*",
+		"*://www.advil.com/*",
+		"*://www.chapstick.com/*",
+		"*://www.emergenc.com/*",
+		"*://www.epipen.com/*",
+		"*://www.ups.com/*",
+		"*://www.kochind.com/*",
+		"*://www.molex.com/*",
+		"*://www.gp.com/*",
+		"*://www.angelsoft.com/*",
+		"*://www.brawny.com/*",
+		"*://www.dixie.com/*",
+		"*://www.mardigrasnapkins.com/*",
+		"*://www.quiltednorthern.com/*",
+		"*://www.sparkletowels.com/*",
+		"*://www.vanityfairnapkins.com/*",
+		"*://www.statefarm.com/*",
+		"*://www.3m.com/*",
+		"*://www.acebrand.com/*",
+		"*://www.command.com/*",
+		"*://www.filtrete.com/*",
+		"*://www.futuro-usa.com/*",
+		"*://www.nexcare.com/*",
+		"*://www.post-it.com/*",
+		"*://www.scotchbrand.com/*",
+		"*://www.scotchblue.com/*",
+		"*://www.scotch-brite.com/*",
+		"*://www.scotchgard.com/*",
+		"*://www.avaloneyewear.com/*",
+		"*://www.tysonfoods.com/*",
+		"*://www.tyson.com/*",
+		"*://www.jimmydean.com/*",
+		"*://www.hillshirefarm.com/*",
+		"*://www.hillshiresnacking.com/*",
+		"*://www.ballparkbrand.com/*",
+		"*://www.dixie.com/*",
+		"*://www.raisedandrooted.com/*",
+		"*://www.aidells.com/*",
+		"*://www.corndogs.com/*",
+		"*://www.natureraisedfarms.com/*",
+		"*://www.saraleedeli.com/*",
+		"*://www.wrightbrand.com/*",
+		"*://www.tysonfoodservice.com/*",
+		"*://www.tysonfreshmeats.com/*",
+		"*://www.delianytime.com/*",
+		"*://www.gallosalame.com/*",
+		"*://www.advancepierre.com/*",
+		"*://www.barberfoods.com/*",
+		"*://www.bigazsandwiches.com/*",
+		"*://www.fastfixin.com/*",
+		"*://www.steakeze.com/*",
+		"*://www.phillycheesesteak.com/*",
+		"*://www.bryanfoods.com/*",
+		"*://www.truechews.com/*",
+		"*://www.nudgesdogtreats.com/*",
+		"*://www.haystackmountaincheese.com/*"
 	]
 }
