--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "BadBusiness",
+	"name": "Prison Block",
 	"version": "2.0",
-	"description": "Abolish prison labor and the prison-industrial complex",
+	"description": "Automatically notify when a searched company exploits and/or supports prison labor",
 	"icons": {
 		"16": "icons/logo16.png",
 		"48": "icons/logo48.png",
