--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,6 @@
 	[
 		"webRequest",
 		"webRequestBlocking",
-		"background",
 		"*://www.pfizer.com/*",
 		"*://www.centrum.com/*",
 		"*://www.robitussin.com/*", 
@@ -84,6 +83,7 @@
 		"*://www.bryanfoods.com/*",
 		"*://www.truechews.com/*",
 		"*://www.nudgesdogtreats.com/*",
-		"*://www.haystackmountaincheese.com/*"
+		"*://www.haystackmountaincheese.com/*",
+		"background"
 	]
 }
