--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
 	"name": "Prison Block",
-	"version": "2.0",
-	"description": "Automatically notify when a searched company exploits and/or supports prison labor",
+	"version": "2.0.1",
+	"description": "Automatically notify user when a searched company exploits and/or supports prison labor",
 	"icons": {
 		"16": "icons/logo16.png",
 		"48": "icons/logo48.png",
@@ -24,65 +24,6 @@
 	"permissions":
 	[
 		"background",
-		"tabs",
-		"*://www.pfizer.com/*",
-		"*://www.centrum.com/*",
-		"*://www.robitussin.com/*", 
-		"*://www.viagra.com/*",
-		"*://www.advil.com/*",
-		"*://www.chapstick.com/*",
-		"*://www.emergenc.com/*",
-		"*://www.epipen.com/*",
-		"*://www.ups.com/*",
-		"*://www.kochind.com/*",
-		"*://www.molex.com/*",
-		"*://www.gp.com/*",
-		"*://www.angelsoft.com/*",
-		"*://www.brawny.com/*",
-		"*://www.dixie.com/*",
-		"*://www.mardigrasnapkins.com/*",
-		"*://www.quiltednorthern.com/*",
-		"*://www.sparkletowels.com/*",
-		"*://www.vanityfairnapkins.com/*",
-		"*://www.statefarm.com/*",
-		"*://www.3m.com/*",
-		"*://www.acebrand.com/*",
-		"*://www.command.com/*",
-		"*://www.filtrete.com/*",
-		"*://www.futuro-usa.com/*",
-		"*://www.nexcare.com/*",
-		"*://www.post-it.com/*",
-		"*://www.scotchbrand.com/*",
-		"*://www.scotchblue.com/*",
-		"*://www.scotch-brite.com/*",
-		"*://www.scotchgard.com/*",
-		"*://www.avaloneyewear.com/*",
-		"*://www.tysonfoods.com/*",
-		"*://www.tyson.com/*",
-		"*://www.jimmydean.com/*",
-		"*://www.hillshirefarm.com/*",
-		"*://www.hillshiresnacking.com/*",
-		"*://www.ballparkbrand.com/*",
-		"*://www.dixie.com/*",
-		"*://www.raisedandrooted.com/*",
-		"*://www.aidells.com/*",
-		"*://www.corndogs.com/*",
-		"*://www.natureraisedfarms.com/*",
-		"*://saraleedeli.com/*",
-		"*://www.wrightbrand.com/*",
-		"*://www.tysonfoodservice.com/*",
-		"*://www.tysonfreshmeats.com/*",
-		"*://www.delianytime.com/*",
-		"*://www.gallosalame.com/*",
-		"*://www.advancepierre.com/*",
-		"*://www.barberfoods.com/*",
-		"*://www.bigazsandwiches.com/*",
-		"*://www.fastfixin.com/*",
-		"*://steakeze.com/*",
-		"*://phillycheesesteak.com/*",
-		"*://www.bryanfoods.com/*",
-		"*://www.truechews.com/*",
-		"*://www.nudgesdogtreats.com/*",
-		"*://haystackmountaincheese.com/*"
+		"tabs"
 	]
 }
